--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+.main{
+    width: 900px;
+    height: 1200px;
+    background-color: rgb(226, 226, 226);
+    border-radius: 50px;
+    padding: 30px;
+}
+
 .cart{
     display: grid;
-    grid-template-columns: 60px auto;
+    grid-template-columns: 80px auto;
+    align-items: center;
 }
 .header{
     display: grid;
@@ -12,6 +21,13 @@
     background: none;
     border: none;
 }
+.textTenue{
+    color: rgb(156, 156, 156);
+}
+
+.bold{
+    font-weight: bold;
+}
 
 .information{
     display: grid;
@@ -20,7 +36,7 @@
     justify-content: center;
 }
 
-.imgdiv{
+img{
     border-radius: 40px;
 }
 
@@ -33,4 +49,51 @@
     display: grid;
     grid-template-columns: auto auto;
     margin: 30px;
+}
+
+.operation{
+    display: grid;
+    grid-template-columns: 50px 50px 50px 120px 30px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.btnProduct{
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+}
+hr {
+    height: 25px;
+    width: 100%;
+    background-image: radial-gradient(
+      farthest-side at 50% -50%,
+      hsla(0, 0%, 0%, 1),
+      hsla(0, 0%, 0%, 0));
+    position: relative; 
+  }
+  
+  hr::before {
+    height: 1px;
+    position: absolute;
+    top: -1px;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(
+      90deg,
+      hsla(0, 0%, 0%, 0),
+      hsla(0, 0%, 0%, 0.75) 50%,
+      hsla(0, 0%, 0%, 0));
+  }
+
+.icon{
+    background: none;
+    border: none;
+    font-size: 35px;
+    color: gray;
+}
+.totaldiv{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
 }
