--- a/src/index.css
+++ b/src/index.css
@@ -146,11 +146,11 @@ hr {
     color: rgb(82, 82, 82);
     font-weight: 500;
 }
-.subtotalesTextDiv{
+.totalesTextDiv{
     display: grid;
     row-gap: 15px;
 }
-.subtotalText{
+.totalText{
     font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
 }
